--- a/src/app/core/layout/footer.html
+++ b/src/app/core/layout/footer.html
@@ -1,6 +1,6 @@
-<footer class="footer">
+<footer class="footer bg-black text-white-50 fw-normal">
   <div class="container">
-    <div class="footer-content text-center">
+    <div class="footer-content text-center p-3">
       <div class="copyright">
         Template Copyright &#64; 
         <a href="http://themes.3rdwavemedia.com/" target="_blank">3rd Wave Media</a>
