--- a/src/app/features/promo/promo-section.css
+++ b/src/app/features/promo/promo-section.css
@@ -57,11 +57,6 @@
   background: rgba(0, 0, 0, 0.8);
 }
 
-.updates-block .updates-block-inner {
-  padding-left: 60px;
-  padding-right: 60px;
-}
-
 .updates-block .carousel-inner {
   min-height: 100px;
 }
@@ -134,7 +129,7 @@
 }
 
 .updates-block .carousel-content {
-  padding-left: 200px;
+  padding-left: 20px;
   max-width: 760px;
 }
 
@@ -151,7 +146,6 @@
   position: static;
   margin-left: 190px;
   margin-top: 15px;
-  display: inline-block;
 }
 
 .updates-block .carousel-content .desc a {
@@ -215,6 +209,10 @@
   opacity: 1;
 }
 
+.updates-block-inner {
+  max-width: 860px;
+}
+
 /* Media Queries */
 @media (max-width: 767.98px) {
   .promo-section {
@@ -240,11 +238,6 @@
     min-height: 350px;
     padding: 25px 0;
     overflow: visible;
-  }
-
-  .updates-block .updates-block-inner {
-    padding-left: 20px;
-    padding-right: 20px;
   }
 
   .updates-block .carousel .carousel-item {
@@ -290,11 +283,11 @@
 
   .updates-block .btn-cta {
     position: static;
-    width: 100%;
     margin-top: 0;
-    align-self: stretch;
     flex-shrink: 0;
     margin-left: unset;
+    width: 100%;
+    align-self: stretch;
   }
 
   /* Handle carousel items without media */
@@ -327,17 +320,12 @@
     min-height: 320px;
   }
 
-  .updates-block .updates-block-inner {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding-left: 60px;
-    padding-right: 60px;
-  }
-
   .updates-block .btn-cta {
     position: static;
     margin-left: 190px;
     margin-top: 15px;
+    width: auto;
+    align-self: flex-start;
   }
 
   .updates-block .carousel .carousel-item {
@@ -356,14 +344,12 @@
     min-height: 240px;
   }
 
-  .updates-block .updates-block-inner {
-    max-width: 1200px;
-  }
-
   .updates-block .btn-cta {
     position: static;
     margin-left: 190px;
     margin-top: 15px;
+    width: auto;
+    align-self: flex-start;
   }
 
   .updates-block .carousel .carousel-item {
