--- a/src/app/features/gigs/gigs-section.html
+++ b/src/app/features/gigs/gigs-section.html
@@ -3,16 +3,16 @@
     <h2 class="section-title text-center">Kommende Aufführungen</h2>
     <div class="gigs-container">
       @for (gig of gigs(); track gig.id) {
-        <div class="item">
-          <div class="date-label">
-            <div class="number">{{ gig.date.day }}.</div>
-            <div class="month">{{ gig.date.month }}</div>
+        <div class="item position-relative pt-3 pb-4 border-bottom">
+          <div class="date-label text-center d-inline-block position-absolute start-0">
+            <div class="number fw-bold">{{ gig.date.day }}.</div>
+            <div class="month fw-semibold">{{ gig.date.month }}</div>
             <div class="year">{{ gig.date.year }}</div>
           </div>
           
           <div class="gig-info">
             <div class="info-content">
-              <h3 class="gig-title">{{ gig.title }}</h3>
+              <h3 class="gig-title mt-0 mb-2 fw-bold">{{ gig.title }}</h3>
               <div class="meta">
                 <ul class="meta-list list-inline">
                   <li class="list-inline-item location">
@@ -29,13 +29,13 @@
               </div>
             </div>
             
-            <div class="gig-actions">
+            <div class="gig-actions position-absolute end-0 d-flex flex-column flex-md-row gap-2">
               <button 
-                class="btn btn-xs btn-ghost-secondary" 
+                class="btn btn-xs btn-ghost-secondary w-100 w-md-auto" 
                 (click)="openGigDetail(gig)">
                  Infos
               </button>
-              <a class="btn btn-xs btn-secondary" [href]="gig.ticketUrl">
+              <a class="btn btn-xs btn-secondary  w-100 w-md-auto" [href]="gig.ticketUrl">
                 Tickets 
               </a>
             </div>
