--- a/src/app/features/newsletter/newsletter-dialog.html
+++ b/src/app/features/newsletter/newsletter-dialog.html
@@ -5,7 +5,7 @@
     @if (isSubmitting) {
       <div class="text-center">
         <div class="spinner-border text-primary" role="status">
-          <span class="sr-only">Wird gesendet...</span>
+          <span class="visually-hidden">Wird gesendet...</span>
         </div>
         <p class="mt-2">Anmeldung wird verarbeitet...</p>
       </div>
